[package]
name = "hamtransfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.28"
futures-timer = "3.0.2"
futures-util = "0.3.28"
lazy_static = "1.4.0"
prost = "0.11"
rand = "0.8.5"
raptor-code = "1.0.5"
regex = "1.8.3"
rusqlite = "0.29.0"
sha256 = "1.1.3"
#sqlite = "0.30.4"
structopt = "0.3.26"
#tokio = "1.28.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.9"

[[bin]]
name = "uploader"
path = "src/bin/uploader.rs"

[[bin]]
name = "downloader"
path = "src/bin/downloader.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.9"

[profile.release]
overflow-checks = true
